Wrote more exploits to fragmentation.

--- a/09. IP Fragmentation.md
+++ b/09. IP Fragmentation.md
@@ -4,16 +4,14 @@ IP Fragmentation is the process of breaking down and Internet Protocol packet to
 
 ### How Is It Done
 
-> #### Fragmentation
->
-> First, if the `Don't fragment` flag is on in the IP header the pacלet will not be fragmented. Else, N new ip packets are created.  Then the IP header is duplicated from the original packet to the new smaller packets and the data is devided into those packets equally in bytes. The IP header also undergoes some changes:
+#### <font size=4>Fragmentation</font>
+> First, if the `Don't fragment` flag is on in the IP header the packet will not be fragmented. Else, `N` new ip packets are created.  Then the IP header is duplicated from the original packet to the new smaller packets and the data is devided into those packets equally in bytes. The IP header also undergoes some changes:
 > * `more-fragments` flag is turned on for all of the packets, for the last fragments it is set to the value from the header of the original packet.
 > * `Identification` the packets are given an identification number to state that they belong to the same original packet.
 > * `fragment offset` the fragment offset is set to 0 on the *first fragment*, and the rest are set to amount of data offset in 8 byte blocks (offset of 400 bytes / 8 bytes = 50).
 > * `total length` is set to the length of the new packet.
 
-> #### Reassembly
->
+#### <font size=4>Reassembly</font>
 > The way the packet is reconstituted is first by finding the fragments that belong to it. There are 4 things that need to match in order to tie it to the same packet: Destination IP, Source IP, Protocol & Identification number. When discovering a new packet a buffer is created for it, then the arriving packets are put inside. The buffer is a list of "hole"s, a hole is a continous region inside the buffer whose bytes are blank and not yet occupied by a fragment.
 >
 > The hole object has a hole.first and a hole.last property, both containing the first and last byte of the hole. At first the entire buffer is one big hole (hole.last will be a really large number).
@@ -24,10 +22,35 @@ IP Fragmentation is the process of breaking down and Internet Protocol packet to
 
 Packet fragmentation can be exploited and that is due to the fact that packet fragment reassembly takes resources from the target computers. When reassembling a packet the computer has to open a new buffer for it, and that is a vulnurability that can be taken advantage of by attackers.
 
-> #### UDP & ICMP Fragantation attacks
+#### <font size=4>Teardrop</font>
+> The teaddrop attack exploits the reassembly mechanism in computers by sending crudely forged packets in fragments with overlapping offset and inflated sizes to exhause the resources on the remote machine.
+
+#### <font size=4>Evasion</font>
+> Ip fragmentation can be used to evade Intrusion Detection Systems in two ways:
 >
-> These attacks are using protocol that are stateless, create "bad" packets, fragment them and send them over to the victim. The fragments cannot be reassembled on the victim machine since they are not valid and thus when sent in a volume, ovewhelm the target machine and deplete their resource.
+> 1. Small Fragments<br>
+> The IDS is sent small crafted fragments of a malicious payload, the ttacker can then tinker with the small fragments in order to make the detection more difficult and the reassembly more complicated.
+>
+> 2. Overlapping Fragments<br>
+>   In this attack the fragments are given overlapping offset and sequence numbers. Some machine handle overlap differently so the goal is that the IDS will interpret this differently from the target machine. This may also disrupt detection.
+
+#### <font size=4>Rose Attack</font>
+> This is a pretty cool and very simple attack, it is also a form of DOS attack. In the rose attack the attacker send only two fragments of an imaginary but huge packet, those being the first (`offset=0`, `MF=1`) and last (`offset=63,000`, `MF=0`). With this the target machine will wait for the remaining fragments and wont accept other fragments. Slower machines can struggle with this very hard, faster machines can deal with it but they will be throttled.
+>
+> [src](https://web.archive.org/web/20120224113108/http://digital.net/~gandalf/Rose_Frag_Attack_Explained.htm)
+
+#### <font size=4>New Dawn Attack</font> 
+> This attack is carried out by sending the same last fragment over and over for a large incomplete packet, which forces the target machien to reassemble the packer over and over again. Ultimately, exhausting resource, mainly CPU.
+>
+> Source is included in the source of the rose attack.
+
+
+#### <font size=4>Jolt2 Attack</font>
+> Jolt 2 is an attack that locks a remote computer by making it utilize 100% of it's CPU. It is done by sending the same fragment over and over again, for the duration of the spam the target machine is locked.
+> 
+> [src](https://www.giac.org/paper/gcih/104/jolt-2/100352)
 
 ```diff 
 - (There are more ways to exploit this mechanisem,write about them)
++ OK
 ```
